--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -35,5 +35,6 @@
   </div><!-- /.container-fluid -->
 </nav>
 
-
-<h1>This is my landing page for The League @ RIRC!</h1>
+<div class="hero">
+  <h1>This is my landing page for The League @ RIRC!</h1>
+</div>
