--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -36,5 +36,12 @@
 </nav>
 
 <div class="hero">
-  <h1>This is my landing page for The League @ RIRC!</h1>
+  <br /><br /><br /><br /><br /><br /><br />
+  <div class="practice-button col-xs-offset-3 col-xs-12 text-center">
+    <%= link_to 'Practices', '#', class: "btn btn-primary btn-lg" %>
+  </div>
+  <br /><br /><br /><br /><br /><br />
+  <div class="match-button col-xs-offset-3 col-xs-12 text-center">
+    <%= link_to 'Matches', '#', class: "btn btn-primary btn-lg" %>
+  </div>
 </div>
