--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -27,6 +27,10 @@ h1, h2, h3, h4, h5, h6, .navbar {
   font-size: 35px;
 }
 
+.navbar-brand a {
+  text-decoration: none;
+}
+
 // customized twitter bootstrap button
 .btn {
     padding: 14px 24px;
