--- a/app/views/captain/practices/new.html.erb
+++ b/app/views/captain/practices/new.html.erb
@@ -1,3 +1,16 @@
 <div class="col-xs-10 col-xs-offset-1">
   <h1>Add a new practice</h1>
+  <br /><br />
+  <%= simple_form_for @practice, url: captain_practices_path do |f| %>
+    <br />
+    <%= f.label :date %>
+    <%= f.date_select :date, start_year: Date.today.year,
+                                 end_year: Date.today.year+1,
+                                 order: [:month, :day, :year] %>
+    <br /><br />
+    <%= f.label :time %>
+    <%= f.time_select :time, {ampm: true} %>
+    <br /><br /><br />
+    <%= f.submit "Add", class: "btn btn-primary btn-lg" %>
+  <% end %>
 </div>
