Add link from landing page to practice index page

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,7 +1,7 @@
 <div class="hero">
   <br /><br /><br /><br /><br /><br /><br />
   <div class="practice-button col-xs-offset-3 col-xs-12 text-center">
-    <%= link_to 'Practices', '#', class: "btn btn-primary btn-lg" %>
+    <%= link_to 'Practices', practices_path, class: "btn btn-primary btn-lg" %>
   </div>
   <br /><br /><br /><br /><br /><br />
   <div class="match-button col-xs-offset-3 col-xs-12 text-center">
