Add jquery ui datepicker to new practice page

--- a/app/views/captain/practices/new.html.erb
+++ b/app/views/captain/practices/new.html.erb
@@ -14,3 +14,11 @@
     <%= f.submit "Add", class: "btn btn-primary btn-lg" %>
   <% end %>
 </div>
+
+<input type="text" id="datepicker" />
+
+<script>
+  $(function() {
+    $("#datepicker").datepicker()
+  });
+</script>
