--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -14,6 +14,10 @@ h1, h2, h3, h4, h5, h6, .navbar {
   margin: 0;
 }
 
+.clear {
+  clear: both;
+}
+
 .navbar {
   height:70px;
   border-radius: 0;
@@ -65,4 +69,5 @@ h1, h2, h3, h4, h5, h6, .navbar {
   background: #fff;
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding:10px;
 }
