--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -1,13 +1,18 @@
 <br /><br />
-<div class="booyah-box col-xs-8 col-xs-offset-2 text-center">
-<h1>Practice schedule</h1>
+<div class="col-xs-8 col-xs-offset-2 text-center">
+  <h1>Practice schedule</h1>
+  <br /><br />
+</div>
 <br />
+
 <% @practices.each do |practice| %>
     <% if practice.date != nil && practice.time != nil %>
-      <%= practice.date.strftime("%A, %B %d") %>
-      <br />
-      <%= practice.time.strftime("%I %p").sub(/^[0:]*/,"") %>
-      <br /><br />
+        <div class="booyah-box col-xs-6 col-xs-offset-3 text-center">
+          <%= practice.date.strftime("%A, %B %d") %>
+            <br />
+            <%= practice.time.strftime("%I %p").sub(/^[0:]*/,"") %>
+            <br />
+            <%= link_to 'Signup', '#', class: "btn btn-primary" %>
+        </div>
     <% end %>
 <% end %>
-</div>
