Fix outline buttons

--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -38,7 +38,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
 // customized twitter bootstrap button
 .btn {
     padding: 14px 24px;
-    border: 0 none;
+    // border: 0 none;
     font-weight: 700;
     letter-spacing: 1px;
     text-transform: uppercase;
@@ -51,6 +51,7 @@ h1, h2, h3, h4, h5, h6, .navbar {
 .btn-primary {
     background: #0099cc;
     color: #ffffff;
+    border: 0 none;
 }
 
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
@@ -60,6 +61,40 @@ h1, h2, h3, h4, h5, h6, .navbar {
 .btn-primary:active, .btn-primary.active {
     background: #007299;
     box-shadow: none;
+}
+// outline buttons
+.btn-outline {
+    background-color: transparent;
+    color: inherit;
+    transition: all .5s;
+}
+
+.btn-primary.btn-outline {
+    color: #428bca;
+}
+
+.btn-success.btn-outline {
+    color: #5cb85c;
+}
+
+.btn-info.btn-outline {
+    color: #5bc0de;
+}
+
+.btn-warning.btn-outline {
+    color: #f0ad4e;
+}
+
+.btn-danger.btn-outline {
+    color: #d9534f;
+}
+
+.btn-primary.btn-outline:hover,
+.btn-success.btn-outline:hover,
+.btn-info.btn-outline:hover,
+.btn-warning.btn-outline:hover,
+.btn-danger.btn-outline:hover {
+    color: #fff;
 }
 
 .booyah-box {
