--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -12,7 +12,7 @@
             <br />
             <%= practice.time.strftime("%I %p").sub(/^[0:]*/,"") %>
             <br />
-            <%= link_to 'Signup', '#', class: "btn btn-primary" %>
+            <%= link_to 'Signup', '#', class: "btn btn-warning btn-outline" %>
         </div>
     <% end %>
 <% end %>
