--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -97,6 +97,11 @@ h1, h2, h3, h4, h5, h6, .navbar {
     color: #fff;
 }
 
+.btn-warning.btn-outline:hover {
+  background-color: #f9c375;
+  border-color: #f9c375;
+}
+
 .booyah-box {
   -moz-box-shadow: 1px 1px 2px 0 #d0d0d0;
   -webkit-box-shadow: 1px 1px 2px 0 #d0d0d0;
