--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -10,16 +10,18 @@
 <br /><br />
 
 <% @practices.each do |practice| %>
-    <% if practice.date != nil && practice.time != nil %>
+    <% if practice.date != nil && practice.time != nil && practice.cancelled != true %>
         <div class="booyah-box col-xs-6 col-xs-offset-3 text-center">
           <%= practice.date.strftime("%A, %B %d") %>
             <br />
             <%= practice.time.strftime("%I %p").sub(/^[0:]*/,"") %>
             <br /><br />
             <%= link_to 'Signup', '#', class: "btn btn-warning btn-outline" %>
+            &nbsp;&nbsp;
             <% if current_player.captain == true %>
-              <%= link_to 'Add players', '#', class: "btn btn-success btn-outline" %>
-              <%= link_to 'Delete', '#', class: "btn btn-danger btn-outline" %>
+              <%= link_to 'Add signups', '#', class: "btn btn-success btn-outline" %>
+              &nbsp;&nbsp;
+              <%= link_to 'Delete', captain_practice_cancel_path(practice, id: practice.id), method: :post, class: "btn btn-danger btn-outline" %>
             <% end %>
         </div>
     <% end %>
