--- a/app/views/practices/index.html.erb
+++ b/app/views/practices/index.html.erb
@@ -21,7 +21,7 @@
               <div><b>You are signed up!</b></div>
               <%= link_to 'Cancel my signup', '#', class: "btn btn-warning btn-outline" %>
             <% else %>
-              <%= link_to 'Signup', '#', class: "btn btn-info btn-outline" %>
+              <%= link_to 'Signup', practice_signups_path(practice), method: :post, class: "btn btn-info btn-outline" %>
             <% end %>
 
             &nbsp;&nbsp;
