--- a/app/views/practices/show.html.erb
+++ b/app/views/practices/show.html.erb
@@ -1,4 +1,7 @@
 <br /><br />
+<div class="col-xs-10 col-xs-offset-2 pull-left">
+  <h3><%= link_to '< Back', :back %></h3>
+</div>
 <div class="col-xs-10 col-xs-offset-1 text-center">
   <h1>Who's going?</h1>
   <h3><%=current_practice.date.strftime("%A, %B %d") %> practice @ <%=current_practice.time.strftime("%I %p").sub(/^[0:]*/,"")%></h3>
