--- a/app/views/captain/signups/new.html.erb
+++ b/app/views/captain/signups/new.html.erb
@@ -1,10 +1,27 @@
 <br /><br />
 <div class="booyah-box col-xs-10 col-xs-offset-1 text-center">
-  <h1>Sign up player for practice</h1>
+  <h1>Add player to practice</h1>
   <br /><br />
 
   <h3>Select a player:</h3>
   <br />
+  <select name="player">
+    <%= @players.each do |player| %>
+      <option value="<%=player%>"><%= player.first_name %> <%= player.last_name %></option>
+    <% end %>
+  </select>
+  <br /><br /><br />
+
   <h3>Select a practice date:</h3>
   <br />
+  <select name="practice">
+    <%= @practices.each do |practice| %>
+      <option value="<%=practice%>"><%= practice.date.strftime("%A %B %d") %></option>
+    <% end %>
+  </select>
+  <br /><br /><br />
+
+  <!-- <%= link_to 'Signup', captain_practice_signups_path(practice), method: :post, class: "btn btn-primary btn-large" %> -->
+  <br /><br />
+
 </div>
