--- a/app/views/captain/signups/new.html.erb
+++ b/app/views/captain/signups/new.html.erb
@@ -21,14 +21,12 @@
   <br /><br />
 </div>
 
-<!-- http://localhost:3000/captain/practices/17/signups?player_id=80 -->
-
 <script>
   $(function() {
     $('.submit-link').on('click', function() {
       practice_id = $(".practice-select").val();
       player_id = $(".player-select").val();
-      $(this).attr('href', '/practices/' + practice_id + '/signups');
+      $(this).attr('href', '/practices/' + practice_id + '/signups?player_id=' + player_id);
       })
 
   });
