--- a/app/views/captain/practices/new.html.erb
+++ b/app/views/captain/practices/new.html.erb
@@ -1,7 +1,6 @@
-<div class="col-xs-10 col-xs-offset-1">
-  <br />
+<br /><br /><br /><br />
+<div class="booyah-box col-xs-6 col-xs-offset-3 text-center">
   <h1>Add a new practice</h1>
-  <br />
   <%= simple_form_for @practice, url: captain_practices_path do |f| %>
     <br />
     <%= f.label :date %>
@@ -9,7 +8,7 @@
     <br /><br />
     <%= f.label :time %>
     <%= f.time_select :time, {minute_step: 15, ampm: true} %>
-    <br /><br /><br />
+    <br /><br />
     <%= f.submit "Add", class: "btn btn-primary btn-lg" %>
   <% end %>
 </div>
