--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,6 +30,7 @@
       <ul class="nav navbar-nav navbar-right">
         <% if player_signed_in? %>
           <li><%= link_to 'Sign Out', destroy_player_session_path, method: :delete %></li>
+          &nbsp; &nbsp;
         <% else %>
           <li><%= link_to 'Sign In', new_player_session_path %></li>
           <li><%= link_to 'Sign Up', new_player_registration_path %></li>
