Add player_id field to link_to on practice index page

--- a/app/views/captain/signups/new.html.erb
+++ b/app/views/captain/signups/new.html.erb
@@ -1,7 +1,7 @@
 <br /><br />
 
-<% practice_id = 0 %>
-<% player_id = 0 %>
+<% practice_id = "" %>
+<% player_id = "" %>
 
 <div class="booyah-box col-xs-10 col-xs-offset-1 text-center">
   <h1>Add player to practice</h1>
