Add Roster page with practice count

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
           <ul class="dropdown-menu">
             <li><a href="#">Match Schedule</a></li>
             <li><%= link_to 'Practice Schedule', practices_path %></li>
-            <li><a href="#">Scores</a></li>
+            <li><%= link_to 'Roster', players_path %></li>
             <!-- <li role="separator" class="divider"></li>
             <li><a href="#">Sign In</a></li> -->
           </ul>
