--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -116,3 +116,8 @@ h1, h2, h3, h4, h5, h6, .navbar {
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding:26px;
 }
+
+hr {
+  height: 1px;
+  border-top: 1px solid #ccc;
+}
