--- a/app/views/players/index.html.erb
+++ b/app/views/players/index.html.erb
@@ -11,10 +11,14 @@
   <% @players.each do |player| %>
     <div class="col-xs-6 col-xs-offset-3">
         <div class="col-xs-5 pull-left">
-          <h3><%= player.first_name %> <%= player.last_name %></h3>
+          <%= link_to player_path(player), class: 'no-link' do %>
+            <div><h3><%= player.first_name %> <%= player.last_name %></h3></div>
+          <% end %>
         </div>
         <div class="col-xs-1 pull-right">
-          <h3><%= player.signed_up_practices.count %></h3>
+          <%= link_to player_path(player), class: 'no-link' do %>
+            <div><h3><%= player.signed_up_practices.count %></h3></div>
+          <% end %>
         </div>
         <hr />
     </div>
