--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -1,10 +1,10 @@
 <div class="hero">
-  <br /><br /><br /><br /><br /><br /><br />
-  <div class="practice-button col-xs-offset-3 col-xs-12 text-center">
+  <br /><br /><br /><br /><br /><br />
+  <div class="col-xs-offset-3 col-xs-12 text-center">
     <%= link_to 'Practices', practices_path, class: "btn btn-primary btn-lg" %>
   </div>
   <br /><br /><br /><br /><br /><br />
-  <div class="match-button col-xs-offset-3 col-xs-12 text-center">
+  <div class="col-xs-offset-3 col-xs-12 text-center">
     <%= link_to 'Matches', '#', class: "btn btn-primary btn-lg" %>
   </div>
 </div>
