--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -14,9 +14,9 @@
   <% end %>
 
   <% @player.signed_up_practices.each do |practice| %>
-    <% if practice.date < Time.now && practice.count != 0 %>
+    <% if practice.date < Time.now && practice != nil %>
       <h3><%= practice.date.strftime("%A, %B %d") %></h3>
-    <% else %>
+    <% else%>
       <h3><i>Player has not attended any practices yet!</i></h3>
     <% end %>
 
