--- a/app/views/players/show.html.erb
+++ b/app/views/players/show.html.erb
@@ -13,7 +13,7 @@
     <h3><i>Player has not attended any practices yet!</i></h3>
   <% end %>
 
-  <% @player.signed_up_practices.each do |practice| %>
+  <% @player.signed_up_practices.order('date ASC').each do |practice| %>
     <% if practice.date < Time.now %>
       <h3><%= practice.date.strftime("%A, %B %d") %></h3>
     <% elsif practice.date > Time.now %>
