Add match model and index view and controller

--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -5,6 +5,6 @@
   </div>
   <br /><br /><br /><br /><br /><br />
   <div class="col-xs-offset-3 col-xs-12 text-center">
-    <%= link_to 'Matches', '#', class: "btn btn-primary btn-lg" %>
+    <%= link_to 'Matches', matches_path, class: "btn btn-primary btn-lg" %>
   </div>
 </div>
