--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,7 +38,7 @@
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><%= link_to 'Practice Schedule', practices_path %></li>
-            <li><a href="#">Match Schedule</a></li>
+            <li><%= link_to 'Match Schedule', matches_path %></li>
             <li><%= link_to 'Roster', players_path %></li>
             <!-- <li role="separator" class="divider"></li>
             <li><a href="#">Sign In</a></li> -->
